Fixed home page's vertical spacing on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,15 +26,6 @@ body {
   background-color: $primary-color;
 }
 
-// Used to vertically expand pages so the footer doesn't show unless scrolled to
-.container {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  height: 100vh;
-  width: 100%;
-}
-
-
 header {
   padding: 50px 88px 0px 88px;
   height: fit-content;
@@ -108,11 +99,19 @@ footer {
 }
 
 /* Home Page */
+.index-container {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  min-height: 100vh;
+  width: 100%;
+  height: auto;
+}
 
 .home {
   flex-direction: column;
   row-gap: 50px;
 }
+
 
 .social-icons {
   display: flex;
@@ -132,6 +131,19 @@ footer {
 }
 
 /* About Page */
+.about-container {
+  display: grid;
+  min-height: 100vh;
+}
+
+.about {
+  display: grid;
+  justify-self: center;
+  align-self: center;
+}
+
+
+
 
 /* Project Page */
 /* Cards */
@@ -239,6 +251,14 @@ footer {
 }
 
 /* Contact Page */
+.contact-container {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  min-height: 100vh;
+  width: 100%;
+  height: auto;
+}
+
 // Remove redundant styles from here that are in main when finished
 .contact {
   height: 100%;
